--- a/package.json
+++ b/package.json
@@ -11,15 +11,16 @@
   "author": "Victor Garza",
   "license": "MIT",
   "dependencies": {
-    "@babel/core": "^7.14.8",
-    "@babel/preset-env": "^7.14.8",
+    "@babel/core": "^7.15.8",
+    "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
-    "aos": "^3.0.0-beta.6",
+    "acorn": "^8.5.0",
+    "ansi-regex": "^6.0.1",
     "babel-loader": "^8.2.2",
     "classnames": "^2.3.1",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
-    "css-minimizer-webpack-plugin": "^3.0.2",
-    "glob-parent": "^6.0.1",
+    "css-minimizer-webpack-plugin": "^3.1.1",
+    "glob-parent": "^6.0.2",
     "live-server": "^1.2.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
@@ -30,21 +31,16 @@
     "terser-webpack-plugin": "^5.1.4"
   },
   "devDependencies": {
-    "babel-eslint": "^10.1.0",
-    "css-loader": "^6.2.0",
-    "eslint": "^7.31.0",
-    "eslint-config-airbnb": "^18.2.1",
-    "eslint-plugin-import": "^2.23.4",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-react": "^7.24.0",
+    "@svgr/webpack": "^5.5.0",
+    "css-loader": "^6.4.0",
     "file-loader": "^6.2.0",
     "html-loader": "^2.1.2",
     "html-webpack-plugin": "^5.3.2",
-    "mini-css-extract-plugin": "^2.1.0",
+    "mini-css-extract-plugin": "^2.4.2",
     "node-sass": "^6.0.1",
     "sass-loader": "^12.1.0",
-    "webpack": "^5.47.0",
-    "webpack-cli": "^4.7.2",
-    "webpack-dev-server": "^4.0.0"
+    "webpack": "^5.58.1",
+    "webpack-cli": "^4.9.0",
+    "webpack-dev-server": "^4.3.1"
   }
 }
