--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@babel/core": "^7.15.8",
     "@babel/preset-env": "^7.15.8",
     "@babel/preset-react": "^7.14.5",
+    "@formspree/react": "^2.2.4",
     "acorn": "^8.5.0",
     "ansi-regex": "^6.0.1",
     "babel-loader": "^8.2.2",
